crates/hdk/tests/tests/hdk_extern/hdk_extern_invalid_return.rs
use hdk::prelude::*;

#[hdk_extern] 
fn zome_fn() -> String {
    "should be wrapped in ExternResult".into()
}

fn main() {}
